--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,7 +17,10 @@
     "@mui/lab": "^7.0.0-beta.14",
     "@mui/material": "^7.2.0",
     "axios": "^1.11.0",
+    "framer-motion": "^12.23.9",
     "react": "^19.1.0",
+    "react-confetti": "^6.4.0",
+    "react-countup": "^6.5.3",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.61.1",
     "react-router-dom": "^7.7.1"
