--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # API Configuration
-VITE_API_BASE_URL=http://localhost:5000/api
+VITE_API_URL=http://localhost:5000/api
 
 # Google Maps API
 VITE_GOOGLE_MAPS_API_KEY=AIzaSyAPREHAXknXIDLKG6hHhpty99gxlOlkpRw
