--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "populate": "node populate-database-complete.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "health": "curl http://localhost:5000/api/health || node -e \"console.log('Starting server...'); require('./server.js');\""
   },
   "keywords": [
     "vendors",
@@ -24,7 +26,7 @@
     "compression": "^1.8.1",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
-    "express": "^5.1.0",
+    "express": "^4.21.0",
     "express-rate-limit": "^8.0.1",
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
