--- a/package.json
+++ b/package.json
@@ -5,9 +5,24 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "dev:backend": "cd backend && npm run dev",
+    "dev:both": "concurrently \"npm run dev:backend\" \"npm run dev\" --names \"backend,frontend\" --prefix-colors \"yellow,blue\"",
+    "dev:full": "node start-development.cjs",
+    "dev:populate": "cd backend && node populate-database-complete.js && cd .. && npm run dev:both",
     "build": "vite build",
+    "build:netlify": "npm run build",
+    "build:backend": "cd backend && npm install --production",
+    "build:full": "npm run build && npm run build:backend",
+    "start": "npm run preview",
+    "start:backend": "cd backend && npm start",
+    "start:production": "concurrently \"npm run start:backend\" \"npm run start\" --names \"backend,frontend\" --prefix-colors \"yellow,blue\"",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview --host 0.0.0.0",
+    "deploy:setup": "npm run build:full && echo 'Build completed successfully!'",
+    "deploy:netlify": "npm run build:netlify && echo 'Netlify build completed!'",
+    "deploy:guide": "node deploy-netlify.cjs",
+    "clean": "rm -rf dist node_modules backend/node_modules",
+    "postinstall": "cd backend && npm install"
   },
   "dependencies": {
     "@chakra-ui/react": "^3.23.0",
@@ -36,6 +51,7 @@
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@vitejs/plugin-react": "^4.6.0",
+    "concurrently": "^8.2.2",
     "eslint": "^9.30.1",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
