Repository Cleanup and Production Preparation
 CLEANED UP REPOSITORY:
- Updated .gitignore with comprehensive exclusions
- Removed unnecessary development files and scripts
- Cleaned up environment file duplicates
- Removed test files and temporary scripts
- Deleted backup components and deprecated files

 FILES REMOVED:
- Development scripts: dev-server.js, start-development.*
- Test files: test-*.js, *-test.js
- Environment duplicates: .env.docker, .env.netlify, .env.production
- Backup components: Navbar.backup.jsx, TestNavbar.jsx
- Deployment scripts: deploy-netlify.cjs, verify-deployment.cjs
- Status check scripts: status-check.ps1, status-check.sh
- Database initialization files: init-*.js, populate-database*.js

 UPDATED FILES:
- .gitignore: Comprehensive exclusions for development files
- .env.example: Clean template with proper documentation
- backend/.env.example: Detailed backend environment template

 ADDED DOCUMENTATION:
- CONTRIBUTING.md: Complete contributor guidelines
- Development setup instructions
- Code style guidelines and project structure
- API documentation and deployment guides

 PRODUCTION READY:
- Clean repository structure
- Proper environment variable management
- Comprehensive gitignore configuration
- Developer-friendly documentation
- Streamlined codebase without unnecessary files

The repository is now production-ready with clean structure and proper documentation!

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,16 +1,23 @@
-# MongoDB Atlas Connection
-MONGODB_URI=mongodb+srv://anuragmishra3407:LVQ9c0f1pVtzPtnw@cluster0.ff2qmbr.mongodb.net/haat
+# Backend Environment Variables
+# Copy this file to .env and fill in your actual values
+
+# Database Configuration
+# Get your MongoDB Atlas connection string from: https://cloud.mongodb.com
+MONGODB_URI=mongodb+srv://username:password@cluster.mongodb.net/haat
 
 # JWT Configuration
-JWT_SECRET=your-super-secure-jwt-secret-key-here
-JWT_REFRESH_SECRET=your-super-secure-refresh-secret-key-here
-JWT_EXPIRE=7d
-JWT_REFRESH_EXPIRE=30d
+# Generate secure random strings for these secrets
+JWT_SECRET=your-super-secure-jwt-secret-key-here-minimum-32-characters
+JWT_REFRESH_SECRET=your-super-secure-refresh-secret-key-here-minimum-32-characters
+JWT_EXPIRE=24h
+JWT_REFRESH_EXPIRE=7d
 
-# Google Maps API
-GOOGLE_MAPS_API_KEY=AIzaSyAPREHAXknXIDLKG6hHhpty99gxlOlkpRw
-# Gemini AI API
-GEMINI_API_KEY=AIzaSyAB9ZoyN9FU9D-5jgCJvORMKqhwF6Onglc
+# External API Keys
+# Google Maps API Key - Get from: https://console.cloud.google.com/google/maps-apis
+GOOGLE_MAPS_API_KEY=your_google_maps_api_key_here
+
+# Google Gemini AI API Key - Get from: https://aistudio.google.com/app/apikey
+GEMINI_API_KEY=your_gemini_ai_api_key_here
 
 # Server Configuration
 NODE_ENV=development
