--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,19 @@
-# API Configuration
-VITE_API_BASE_URL=http://localhost:5000/api
+# Frontend Environment Variables
+# Copy this file to .env and fill in your actual values
 
-# Google Maps API
-VITE_GOOGLE_MAPS_API_KEY=AIzaSyAPREHAXknXIDLKG6hHhpty99gxlOlkpRw
+# API Configuration
+VITE_API_URL=http://localhost:5000/api
+
+# Google Maps API Key
+# Get your API key from: https://console.cloud.google.com/google/maps-apis
+VITE_GOOGLE_MAPS_API_KEY=your_google_maps_api_key_here
+
+# Google Gemini AI API Key  
+# Get your API key from: https://aistudio.google.com/app/apikey
+VITE_GEMINI_AI_API_KEY=your_gemini_ai_api_key_here
 
 # App Configuration
-VITE_APP_NAME=VendorHub
+VITE_APP_NAME=Haat
 VITE_APP_VERSION=1.0.0
 
 # Environment
